# QUTMS_AV_Sim

./: JAZZY_MIGRATION_STATUS.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  QUICKSTART_JAZZY.md  README.md  SESSION_UPDATE_2026-02-28.md  TODO.md
qutms_sim/: CMakeLists.txt  package.xml
qutms_sim/config/: bridge.yaml  config.yaml  minimal_controllers.yaml  ros2_controllers.yaml
qutms_sim/launch/: minimal_test.launch.py  sim.launch.py
qutms_sim/models/BM_long_straight/: model.sdf
qutms_sim/models/BM_text_bubble/: model.sdf
qutms_sim/models/B_shape_02_03_2023/: model.sdf
qutms_sim/models/FSDS_Training/: model.sdf
qutms_sim/models/Hairpin_02_03_2023/: model.sdf
qutms_sim/models/Jellybean_02_03_2023/: model.sdf
qutms_sim/models/QR_Nov_2022/: model.sdf
qutms_sim/models/acceleration/: model.sdf
qutms_sim/models/small_oval/: model.sdf
qutms_sim/models/small_track/: model.sdf
qutms_sim/models/small_track_2/: model.sdf
qutms_sim/urdf/: gz_plugins.urdf.xacro  lidar.urdf.xacro  minimal_test.urdf.xacro  robot.urdf.xacro  ros2_control.urdf.xacro  wheels.urdf.xacro
qutms_sim/urdf/components/: lidar.urdf.xacro  wheels.urdf.xacro
qutms_sim/worlds/: BM_long_straight.sdf  BM_text_bubble.sdf  B_shape_02_03_2023.sdf  FSDS_Training.sdf  Hairpin_02_03_2023.sdf  Jellybean_02_03_2023.sdf  QR_Nov_2022.sdf  small_oval.sdf  small_track.sdf  small_track_2.sdf
scripts/: rename_worlds.sh
vehicle_plugins/: CMakeLists.txt  package.xml
vehicle_plugins/gazebo_cone_detection_plugin/: CMakeLists.txt
vehicle_plugins/gazebo_cone_detection_plugin/include/gazebo_cone_detection_plugin/: gazebo_cone_detection.hpp  utils.hpp
vehicle_plugins/gazebo_cone_detection_plugin/src/: gazebo_cone_detection.cpp
vehicle_plugins/gazebo_ins_odometry_plugin/: CMakeLists.txt
vehicle_plugins/gazebo_ins_odometry_plugin/include/gazebo_ins_odometry_plugin/: ins_odometry.hpp
vehicle_plugins/gazebo_ins_odometry_plugin/src/: ins_odometry.cpp
vehicle_plugins/gazebo_sim_reset_plugin/: CMakeLists.txt
vehicle_plugins/gazebo_sim_reset_plugin/include/gazebo_sim_reset_plugin/: sim_reset.hpp
vehicle_plugins/gazebo_sim_reset_plugin/src/: sim_reset.cpp
vehicle_plugins/gazebo_tf_broadcaster_plugin/: CMakeLists.txt
vehicle_plugins/gazebo_tf_broadcaster_plugin/include/gazebo_tf_broadcaster_plugin/: tf_broadcaster.hpp
vehicle_plugins/gazebo_tf_broadcaster_plugin/src/: tf_broadcaster.cpp
vehicle_plugins/gazebo_vehicle_control_plugin/: CMakeLists.txt
vehicle_plugins/gazebo_vehicle_control_plugin/include/gazebo_vehicle_control_plugin/: vehicle_control.hpp  vehicle_control_component.hpp
vehicle_plugins/gazebo_vehicle_control_plugin/src/: vehicle_control.cpp
vehicle_plugins/gazebo_vehicle_plugin/: CMakeLists.txt
vehicle_plugins/gazebo_vehicle_plugin/include/gazebo_vehicle_plugin/: VehicleState.hh  gazebo_vehicle.hpp  utils.hpp
vehicle_plugins/gazebo_vehicle_plugin/src/: gazebo_vehicle.cpp
